# sigma-quant

./: README.md  ex_post_sizing  pyproject.toml  session_realized_pnl
.devcontainer/: Dockerfile
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: autocorr.rst  index.rst  metrics.rst  performance.rst  report.rst  research.rst  returns.rst  risk.rst  rolling.rst  testing.rst
docs/installation/: index.rst
quant_kit/: __init__.py  autocorr.py  custom_typing.py  metrics.py  returns.py  risk.py  utils.py
quant_kit/performance/: __init__.py  metrics.py  report.py  returns.py  risk.py  rolling.py
quant_kit/research/: __init__.py  autocorr.py
sigmaquant/performance/: metrics.py  risk.py
